# primes_presentation

./: .gitignore  CMakeLists.txt  README.md  benchmark.sh  benchmark_result.txt  build.sh  clean.sh  runtime.txt  std_result.txt  toolchain.cmake  without_flags.txt  without_flags_v.txt
.github/workflows/: install_clang.sh  install_gcc.sh  main.yml
benchmark/: CMakeLists.txt  macrobench.cc
scripts/: build_impl.sh  flags.sh
src/: CMakeLists.txt
src/00_runtime/: CMakeLists.txt  main.cc
src/01_compile_time/: CMakeLists.txt  main.cc
src/01_get_primes/: CMakeLists.txt  main.cc
src/02_build_step/: CMakeLists.txt
src/02_compile_time_bits/: CMakeLists.txt  main.cc
src/02_compile_time_improved/: CMakeLists.txt  main
src/02_get_primes_lambda/: CMakeLists.txt  main.cc
src/03_build_step/: CMakeLists.txt  main.cc
src/03_get_primes_ranges/: CMakeLists.txt
toolchain/: clang_debug.cmake  clang_release.cmake  gcc_release.cmake
